UPD: Fix blocks css issue on mobile phone

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,13 +19,30 @@ html {
 // Setup customized blocks styles
 .block {
   border: transparent;
-  padding: 0.05rem 0.2rem 0.1rem;
+  // padding: 0.05rem 0.2rem 0.1rem;
 
   &.blue::before {
     background-color: map-get($color-palette, 'blue');
   }
   &.green::before {
     background-color: map-get($color-palette, 'green');
+  }
+
+  &::before {
+    content: "";
+    background: var(--block-background-color);
+    border: 0.03rem solid var(--block-text-color);
+    border-radius: 0.03rem;
+    position: absolute;
+    top: -0.02rem;
+    left: -0.02rem;
+  }
+
+  &::after {
+    border: 0.03rem solid var(--block-text-color);
+    border-radius: 0.03rem;
+    top: 0.03rem;
+    left: 0.03rem;
   }
 }
 
