--- a/src/stylesheets/PlaygroundCollection.module.scss
+++ b/src/stylesheets/PlaygroundCollection.module.scss
@@ -7,7 +7,7 @@
 
   .header {
     @include textMixin(#fff, 0.22rem, bold, uppercase);
-    background: #00695C;
+    background: #0277BD;
     height: 0.37rem;
     padding-top: 0.07rem;
     font-family: 'Shentox', sans-serif;
